fixed scrollbar bug

--- a/app/assets/stylesheets/components/messages.scss
+++ b/app/assets/stylesheets/components/messages.scss
@@ -17,21 +17,21 @@
     }
   }
   /* Hide scrollbar for Chrome, Safari and Opera */
-  // .messages-display::-webkit-scrollbar {
-    // display: none;
-  // }
+  .messages-display::-webkit-scrollbar {
+    display: none;
+  }
   .messages-display-input-wrapper {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: flex-end;
     width: 100%;
     min-height: 553px;
     height: 95%;
 
     .messages-display {
-      // display: flex;
-      // flex-direction: column;
-      // justify-content: flex-end;
+      display: flex;
+      flex-direction: column;
+      // justify-content will make parent div scrollbar disappear and inactive
       overflow-y: scroll;
       // scrollbar-width: none;  /* Firefox */
       // -ms-overflow-style: none;  /* IE and Edge */
@@ -40,7 +40,12 @@
       min-width: 384px;
       width: 100%;
       min-height: 493px;
-      max-height: 100%;
+      height: 100%;
+    }
+    // dummy div to push messages to the bottom of the page
+    .messages-pushed-to-bottom{
+      border: 1px solid red;
+      height: 100%;
     }
     .message {
       padding-top: 15px;
